Fill out product pages

--- a/src/pages/products/keydo.astro
+++ b/src/pages/products/keydo.astro
@@ -12,4 +12,8 @@ const metadata = {
         title={'KeyDo'}
         subtitle={'This page is coming soon.'}
     />
+    <div class="flex flex-col items-center">
+      <p>Check out KeyDo <a class="underline" href="https://github.com/pagekey/keydo">on GitHub</a>.</p>
+      <p>Posts about KeyDo: <a class="underline" href="/category/keydo">here</a></p>
+    </div>
 </Layout>
