--- a/src/pages/products/boom.astro
+++ b/src/pages/products/boom.astro
@@ -12,4 +12,8 @@ const metadata = {
         title={'Boom Languages'}
         subtitle={'This page is coming soon.'}
     />
+    <div class="flex flex-col items-center">
+      <p>Check out Boom Languages <a class="underline" href="https://github.com/pagekey/boom-languages">on GitHub</a>.</p>
+      <p>Posts about Boom: <a class="underline" href="/category/boom-languages">here</a></p>
+    </div>
 </Layout>
