--- a/src/pages/products/pkos.astro
+++ b/src/pages/products/pkos.astro
@@ -12,4 +12,8 @@ const metadata = {
         title={'PageKey Operating System'}
         subtitle={'This page is coming soon.'}
     />
+    <div class="flex flex-col items-center">
+      <p>Check out PKOS <a class="underline" href="https://github.com/pagekey/pkos">on GitHub</a>.</p>
+      <p>Posts about PKOS: <a class="underline" href="/category/pagekey-operating-system">here</a></p>
+    </div>
 </Layout>
