--- a/src/pages/products/pkvid.astro
+++ b/src/pages/products/pkvid.astro
@@ -12,4 +12,8 @@ const metadata = {
         title={'PKVid'}
         subtitle={'This page is coming soon.'}
     />
+    <div class="flex flex-col items-center">
+      <p>Check out PKVid <a class="underline" href="https://github.com/pagekey/pkvid">on GitHub</a>.</p>
+      <p>Posts about PKVid: <a class="underline" href="/category/pkvid">here</a></p>
+    </div>
 </Layout>
