--- a/src/pages/products/ptd.astro
+++ b/src/pages/products/ptd.astro
@@ -12,4 +12,8 @@ const metadata = {
         title={'Plaintext DAW'}
         subtitle={'This page is coming soon.'}
     />
+    <div class="flex flex-col items-center">
+      <p>Check out Plaintext DAW <a class="underline" href="https://github.com/pagekey/plaintext-daw">on GitHub</a>.</p>
+      <p>Posts about Plaintext DAW: <a class="underline" href="/category/plaintext-daw">here</a></p>
+    </div>
 </Layout>
