Fix mermaid in static build, change article title

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,14 +51,16 @@ const { language, textDirection } = I18N;
         content-visibility: auto;
       }
     </style>
-      <script>
+      <script type="module">
+        import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+        
         // Source: https://github.com/JuanM04/portfolio/blob/983b0ed0eabdac37bf8b7912d3e8128a443192b9/src/pages/docs/%5B...documentSlug%5D.astro#L74-L103
         // From this comment: https://github.com/withastro/astro/issues/4433#issuecomment-1584019991
         /**
          * @params {HTMLCollectionOf<HTMLElement>} graphs
          */
         async function renderDiagrams(graphs) {
-          const {default: mermaid} = await import("mermaid")
+          // const {default: mermaid} = await import("mermaid")
           mermaid.initialize({
             startOnLoad: false,
             fontFamily: "var(--sans-font)",
@@ -77,7 +79,6 @@ const { language, textDirection } = I18N;
             })
           }
         }
-    
         const graphs = document.getElementsByClassName("mermaid")
         if (document.getElementsByClassName("mermaid").length > 0) {
           renderDiagrams(graphs);
